# libforex

./: CMakeLists.txt  README.md
cmake/: FindUUID.cmake
config/: CMakeLists.txt  config.h.in  pathdef.c.in
src/: CMakeLists.txt
